--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -34,7 +34,7 @@ jobs:
           sed -i "s/^token:.*/token: \"${TOKEN}\"/" config.yml
 
       - name: Сделать движок исполняемым
-        run: chmod +x ./engines/stockfish_dev
+        run: chmod +x ./engines/stockfish
 
       - name: Запустить бота
         run: python user_interface.py
