--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,9 +1,7 @@
 name: Запуск бота
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 */5 * * *'  # каждые 5 часов
+    # каждые 5 часов
 
 jobs:
   run-bot:
