--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,9 +1,9 @@
 name: Запуск бота
-on:
 
-    workflow_dispatch:
-    schedule:
-    - cron: '0 */100000000 * * *'
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 */5 * * *'  # каждые 5 часов
 
 jobs:
   run-bot:
